--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,16 @@ google-api-core==2.11.0
 google-api-python-client==2.85.0
 google-auth==2.17.3
 google-auth-httplib2==0.1.0
+google-cloud-aiplatform==1.25.0
+google-cloud-bigquery==3.10.0
+google-cloud-core==2.3.2
+google-cloud-resource-manager==1.10.1
+google-cloud-storage==2.9.0
 google-cloud-vision==3.4.1
+google-crc32c==1.5.0
+google-resumable-media==2.5.0
 googleapis-common-protos==1.59.0
+grpc-google-iam-v1==0.12.6
 grpcio==1.53.0
 grpcio-status==1.53.0
 httplib2==0.22.0
@@ -38,6 +46,7 @@ python-dateutil==2.8.2
 pytz==2023.3
 requests==2.28.2
 rsa==4.9
+Shapely==1.8.5.post1
 six==1.16.0
 tomli==2.0.1
 tzdata==2023.3
