--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ pycodestyle==2.10.0
 pyparsing==3.0.9
 pytesseract==0.3.10
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2023.3
 requests==2.28.2
 rsa==4.9
