--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,11 @@ cachetools==5.3.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
-contourpy==1.0.7
+contourpy==1.0.6
 cycler==0.11.0
 Flask==2.2.3
-fonttools==4.39.4
+gunicorn==20.1.0
+fonttools==4.38.0
 google-api-core==2.11.0
 google-api-python-client==2.85.0
 google-auth==2.17.3
@@ -29,11 +30,11 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 kiwisolver==1.4.4
 MarkupSafe==2.1.2
-matplotlib==3.7.1
-numpy==1.24.3
+matplotlib==3.5.3
+numpy==1.21.6
 opencv-python==4.7.0.72
 packaging==23.1
-pandas==2.0.1
+pandas==1.3.5
 Pillow==9.5.0
 proto-plus==1.22.2
 protobuf==4.22.3
@@ -43,7 +44,7 @@ pycodestyle==2.10.0
 pyparsing==3.0.9
 pytesseract==0.3.10
 python-dateutil==2.8.2
-python-dotenv==1.0.0
+python-dotenv==0.21.1
 pytz==2023.3
 requests==2.28.2
 rsa==4.9
